EB-2002-08-21-0  Bugfix:    qmaster error message during startup: global 
                            configuration doesn't exist - creating
                 Bugtraq:   #4665780
                 Issues:    #226
                 Changed:   sge_qmaster, qconf

AS-2002-08-19-0  Bugfix:    gethostbyaddr binary not working on solaris64
                 Bugtraq:   #4732545
                 Issue:     #359
                 Changed:   gethostbyaddr

SD-2002-08-14-0  Enhancem.  Updated Kerberos integration to handle
                            cross-domain authentication correctly when
                            storing the forwarded credentials in the
                            credentials cache.
                 Changed:   put_cred

AA-2002-08-09-0  I18N:      - aimk: -lXmu for LINUX6 broke build under special
                                    RHLinux 7.3
                                    HFLAGS for gettext
                            - Cli widget multiple localized message lines 
                            - source/3rdparty/qmon/Xmt310/Xmt/HelpBox.c
                              Bugtraq 4721140
                            - source/3rdparty/qmon/Xmt310/Xmt/FontListCvt.c
                              additional debugging code XMTDEBUGFONT env var
                            - fonts, translations for browser, complex window
                              width (4723532, 4725248), global crash (4728293),
                              locale setting qmon_init.c ad file search,
                              q/j customize dialogue (4723543), 
                              accelerators (4729085), 
                              submit dialogue missing msg translations,
                            - arch dependend *.mo files:
                              locale/{fr|ja|zh}/LC_MESSAGES/<arch>/gridengine.mo 

EB-2002-08-08-0  I18N:      Messages in some types of mail notification are 
                            not i18ned.
                 Bugtraq:   #4728217