@@ -1,3 +1,8 @@
+AA-2002-08-21-0  Bugfix:    gid_range bugfix for SGE mode in qmon
+                 Bugtraq:   #4731288
+                 Issues:    #355
+                 Changed:   qmon
+
 EB-2002-08-21-0  Bugfix:    qmaster error message during startup: global 
                             configuration doesn't exist - creating
                  Bugtraq:   #4665780
